force-app/main/default/objects/Book__c/fields/Book_code__c.field-meta.xml
<CustomField>
    <fullName>Book_code__c</fullName>
    <label>Book code</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>