force-app/main/default/objects/Book__c/fields/Book_Status__c.field-meta.xml
<CustomField>
    <fullName>Book_Status__c</fullName>
    <label>Book Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>