force-app/main/default/objects/Book__c/fields/Date_Added_to_Library__c.field-meta.xml
<CustomField>
    <fullName>Date_Added_to_Library__c</fullName>
    <label>Date Added to Library</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>