force-app/main/default/objects/Book__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <label>Edition</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>