force-app/main/default/objects/Book__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bio Technology</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>Computer Science</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Mathematics</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Physics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>