force-app/main/default/objects/Book__c/fields/Issued_Copies__c.field-meta.xml
<CustomField>
    <fullName>Issued_Copies__c</fullName>
    <label>Issued Copies</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>