force-app/main/default/objects/Book__c/fields/Published_Year__c.field-meta.xml
<CustomField>
    <fullName>Published_Year__c</fullName>
    <label>Published Year</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>