force-app/main/default/objects/Book__c/fields/Rack_Number__c.field-meta.xml
<CustomField>
    <fullName>Rack_Number__c</fullName>
    <label>Rack Number</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>