force-app/main/default/objects/Book__c/validationRules/Date_Added_to_Library_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Added_to_Library_Cannot_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Date_Added_to_Library__c  &gt; NOW()</errorConditionFormula>
    <errorDisplayField>Date_Added_to_Library__c</errorDisplayField>
    <errorMessage>Date Added cannot be a future date.</errorMessage>
</ValidationRule>