force-app/main/default/objects/Book__c/validationRules/Ensure_Total_Copies_More_Than_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Total_Copies_More_Than_1</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Copies__c  &lt; 1</errorConditionFormula>
    <errorDisplayField>Total_Copies__c</errorDisplayField>
    <errorMessage>Each book must have at least one copy.</errorMessage>
</ValidationRule>