force-app/main/default/objects/Book__c/validationRules/Published_Year_Cannot_Be_in_the_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Published_Year_Cannot_Be_in_the_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Published_Year__c  &gt;  YEAR( TODAY() )</errorConditionFormula>
    <errorDisplayField>Published_Year__c</errorDisplayField>
    <errorMessage>Published year cannot be in the future.</errorMessage>
</ValidationRule>