force-app/main/default/objects/Book__c/validationRules/Status_Cannot_Be_Issued_If_No_Copies.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Cannot_Be_Issued_If_No_Copies</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Book_Status__c , &apos;Issued&apos;) , Available_Copies__c = 0 )</errorConditionFormula>
    <errorMessage>Cannot mark book as issued if no copies are available.</errorMessage>
</ValidationRule>