force-app/main/default/objects/Book__c/validationRules/Total_Copies_Greaterthan_Avl_Copies.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Copies_Greaterthan_Avl_Copies</fullName>
    <active>true</active>
    <errorConditionFormula>Available_Copies__c  &gt;  Total_Copies__c</errorConditionFormula>
    <errorDisplayField>Available_Copies__c</errorDisplayField>
    <errorMessage>Available copies cannot exceed total copies.</errorMessage>
</ValidationRule>